kubernetes/openfaas/queueworker-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openfaas
    component: queue-worker
  name: queue-worker
  namespace: "openfaas"
spec:
  selector:
    matchLabels:
      app: queue-worker
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: queue-worker
    spec:
      volumes:
      - name: auth
        secret:
          secretName: basic-auth
      containers:
      - name:  queue-worker
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: carlosedp/faas-queue-worker:riscv64
        imagePullPolicy: Always
        volumeMounts:
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
