kubernetes/openfaas/alertmanager-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    component: alertmanager
  name: alertmanager
  namespace: "openfaas"
spec:
  type: ClusterIP
  ports:
    - port: 9093
      protocol: TCP
  selector:
    app: alertmanager
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: openfaas
spec:
  rules:
  - host: faas-alertmanager.192.168.1.17.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
