kubernetes/openfaas/gateway-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    component: gateway
  name: gateway
  namespace: "openfaas"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: gateway
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: openfaas
spec:
  rules:
  - host: faas-gateway.192.168.15.16.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: http
