kubernetes/openfaas/prometheus-svc.yml
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    component: prometheus
  name: prometheus
  namespace: "openfaas"
spec:
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: openfaas
spec:
  rules:
  - host: faas-prometheus.192.168.1.17.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
